apps/syncthing/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing:1.27.3
          ports:
            - containerPort: 8384
              name: http
            - containerPort: 22000
              name: syncthing
            - containerPort: 22000
              name: syncthing-udp
              protocol: UDP
            - containerPort: 21027
              name: discovery
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: data
          persistentVolumeClaim:
            claimName: sync
