apps/syncthing/base/svc-sync.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
spec:
  type: NodePort
  ports:
    - name: sync
      port: 22000
      targetPort: sync
      protocol: TCP
      nodePort: 32000
    - name: sync-udp
      port: 22000
      targetPort: sync-udp
      protocol: UDP
      nodePort: 32000
  selector:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
