apps/syncthing/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: sync
      port: 22000
      protocol: TCP
      targetPort: sync
    - name: sync-udp
      port: 22000
      protocol: UDP
      targetPort: sync-udp
  selector:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-replication
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
  ports:
    - name: sync
      port: 22000
      protocol: TCP
      targetPort: sync
    - name: sync-udp
      port: 22000
      protocol: UDP
      targetPort: sync-udp
