apps/syncthing/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - syncthing.taila659a.ts.net
  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
