apps/syncthing/base/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing-https
spec:
  parentRefs:
    - name: nishir
      sectionName: websecure
  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
