apps/syncthing/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: syncthing
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  policyTypes:
    - Ingress
